libr/include/r_anal.h

typedef struct r_anal_range_t {
	ut64 from;
	ut64 to;
	int bits;
	ut64 rb_max_addr;
	RBNode rb;
} RAnalRange;
#define RAnalBlock struct r_anal_bb_t
typedef struct r_anal_diff_t {
	int type;
	ut32 size;
	ut64 addr;
	double dist;
	char *name;
} RAnalDiff;
typedef struct r_anal_var_t RAnalVar;
struct r_anal_t;
struct r_anal_bb_t;
typedef struct r_anal_callbacks_t {
	int (*on_fcn_new) (struct r_anal_t *, void *user, RAnalFunction *fcn);
	int (*on_fcn_delete) (struct r_anal_t *, void *user, RAnalFunction *fcn);
	int (*on_fcn_rename) (struct r_anal_t *, void *user, RAnalFunction *fcn, const char *oldname);
	int (*on_fcn_bb_new) (struct r_anal_t *, void *user, RAnalFunction *fcn, struct r_anal_bb_t *bb);
} RAnalCallbacks;
typedef struct r_anal_options_t {
	int graph_depth;
	bool vars; //analyze local var and arguments
	int vars_maxbbsize; // skip variable analysis on blocks larger than this size (0 = unlimited)
	int vars_maxframe; // maximum stack-frame delta for variable takeover in bytes (0 = unlimited)
	bool varname_stack; // name vars based on their offset in the stack
	bool var_newstack; // new sp-relative variable analysis
	int cjmpref;
	int jmpref;
	int jmpabove;
	bool ijmp;
	bool jmpmid; // continue analysis after jmp into middle of insn
	bool jmppair; // treat inverse jcc pairs as obfuscation (x86 only)
	bool loads;
	bool ignbithints;
	int followdatarefs;
	int searchstringrefs;
	int followbrokenfcnsrefs;
	int bb_max_size;
	bool trycatch;
	bool norevisit;
	int recont; // continue on recurse analysis mode
	int noncode;
	bool stateful; // permit the use of R_ARCH_OP_MASK_STATEFUL
	bool nopskip; // skip nops at the beginning of functions
	int hpskip; // skip `mov reg,reg` and `lea reg,[reg]`
	int jmptbl; // analyze jump tables
	int jmptbl_maxcases; // maximum number of jump table cases to analyze
	bool jmptbl_split; // enable splitting blocks in jump table analysis
	int nonull;
	bool pushret; // analyze push+ret as jmp
	bool armthumb; //
	bool delay;
	bool tailcall;
	int tailcall_delta;
	bool retpoline;
	bool propagate_noreturn;
	bool recursive_noreturn; // anal.rnr
	bool slow;
	bool flagends;
	bool flagbounds;
	bool zigndups;
	bool icods; // R2_600 -- add anal.icods or anal.xrefs.indirect references. needed for stm8 at least
	char *tparser;
	bool dynprefix;
	const char *defprefix;
	const char *prefix_marker;
	ut64 prefix_radius;
} RAnalOptions;
// XXX we have cc / calling conventions / abi settings already no need for a custom enum here
typedef enum {
	R_ANAL_CPP_ABI_ITANIUM = 0, // default for GCC
	R_ANAL_CPP_ABI_MSVC
} RAnalCPPABI;
typedef struct r_anal_hint_cb_t {
	//add more cbs as needed
	void (*on_bits) (struct r_anal_t *a, ut64 addr, int bits, bool set);
} RHintCb;
typedef struct {
	void *priv;
} RAnalBacktraces;
typedef struct r_ref_manager_t RefManager;
typedef struct r_anal_t {
	RArchConfig *config;
	int lineswidth; // asm.lines.width
	int sleep;      // anal.sleep, sleep some usecs before analyzing more (avoid 100% cpu usages)
	RAnalCPPABI cxxabi; // anal.cpp.abi
	void *user;
	ut64 gp;        // anal.gp, global pointer. used for mips. but can be used by other arches too in the future
	RBTree bb_tree; // all basic blocks by address. They can overlap each other, but must never start at the same address.
	RList *fcns;
	HtUP *ht_addr_fun; // address => function
	HtPP *ht_name_fun; // name => function
	RReg *reg;
	ut8 *last_disasm_reg;
	int last_disasm_reg_size;
	RSyscall *syscall;
	bool diff_ops;
	double diff_thbb;
	double diff_thfcn;
	RIOBind iob;
	RFlagBind flb;
	RFlagSet flg_class_set;
	RFlagGet flg_class_get;
	RFlagSet flg_fcn_set;
	RBinBind binb; // Set only from core when an analysis plugin is called.
	RCoreBind coreb;
	int maxreflines; // asm.lines.maxref
	int esil_goto_limit; // esil.gotolimit
	REsil *esil;
	struct r_anal_plugin_t *cur;
	RArch *arch;
	RAnalRange *limit; // anal.from, anal.to
	Sdb *sdb_types;
	Sdb *sdb_fmts;
	Sdb *sdb_zigns;
	RefManager *rm;
	RSpaces zign_spaces;
	char *zign_path; // dir.zigns
	PrintfCallback cb_printf;
	RPrint *print;
	//moved from RAnalFcn
	Sdb *sdb; // root
	Sdb *sdb_pins;
	HtUP/*<RVecAnalAddrHintRecord>*/ *addr_hints; // all hints that correspond to a single address
	RBTree/*<RAnalArchHintRecord>*/ arch_hints;
	RBTree/*<RAnalArchBitsRecord>*/ bits_hints;
	RHintCb hint_cbs;
	RIntervalTree meta;
	RSpaces meta_spaces;
	Sdb *sdb_cc; // calling conventions
	Sdb *sdb_classes;
	Sdb *sdb_classes_attrs;
	ut64 type_dirty_epoch; // incremented when global typed metadata changes
	RAnalCallbacks cb;
	RAnalOptions opt;
	RList *reflines;
	RList *reflines2;
	RListComparator columnSort;
	int stackptr;
	bool (*log)(struct r_anal_t *anal, const char *msg);
	bool (*read_at)(struct r_anal_t *anal, ut64 addr, ut8 *buf, int len);
	bool verbose;
	RFlagGetAtAddr flag_get;
	REvent *ev;
	RList/*<char *>*/ *imports; // global imports
	RBitset *visited;
	RStrConstPool constpool;
	RList *leaddrs;
	char *pincmd;
	RMutaBind mb;
	RAnalBacktraces btstore;
	void *priv; // Its RAnalPriv but only used internally to not break abi
	/* private */
	RThreadLock *lock;
	RList *eligible;
	ut64 cmpval;
	ut64 lea_jmptbl_ip;
	int cs_obits;
	int cs_omode;
	size_t cs_handle;
	int thread; // see apt command
	RList *threads;
	RColor tracetagcolors[64]; // each trace color for each bit
	/* end private */
	R_DIRTY_VAR;
	RLibStore *libstore;
} RAnal;
typedef struct r_anal_var_access_t {
	const char *reg; // register used for access
	st64 offset; // relative to the function's entrypoint
	st64 stackptr; // delta added to register to get the var, e.g. [rbp - 0x10]
	ut8 type; // R_PERM_{R/W/NONE} // TODO: R2_600 what about using rwx instead of custom enum?
} RAnalVarAccess;
// generic for args and locals
struct r_anal_var_t {
	RAnalFunction *fcn;
	char *name; // name of the variable
	char *type; // cparse type of the variable
	RAnalVarKind kind;
	bool isarg;
	int delta;   /* delta offset inside stack frame */
	char *regname; // name of the register
	RVecAnalVarAccess accesses; // ordered by offset, touch this only through API or expect uaf
	char *comment;
	RVecAnalVarConstraint constraints;

	// below members are just for caching, TODO: remove them and do it better
	int argnum;
};
typedef struct r_anal_cond_t {
	int type; // filled by CJMP opcode
	RArchValue *left; // filled by CMP left opcode
	RArchValue *right; // filled by CMP right opcode
} RAnalCond;
typedef struct r_anal_bb_t {
	RBNode _rb;     // private, node in the RBTree
	ut64 _max_end;  // private, augmented value for RBTree
	ut64 addr;
	ut64 size;
	ut64 jump;
	ut64 fail;
	ut64 traced; // bitfield (each bit represents 1 trace)
	bool folded;
	RColor color;
	ut8 *fingerprint;
	RAnalDiff *diff;
	RAnalCond *cond;
	RAnalSwitchOp *switch_op;
	ut8 *op_bytes;
	ut8 *parent_reg_arena;
	int parent_reg_arena_size;
#if R2_600
	// for the oppos
	USE RVec
#else
	ut16 *op_pos; // offsets of instructions in this block, count is ninstr - 1 (first is always 0)
	int op_pos_size; // size of the op_pos array
	int ninstr;
#endif
	int stackptr;
	int parent_stackptr;
	ut64 cmpval;
	const char *cmpreg;
	ut32 bbhash; // calculated with xxhash
	RList *fcns;
	RAnal *anal;
	char *esil;
	R_REF_TYPE;
	int depth;
#undef RAnalBlock
} RAnalBlock;
/* represents a reference line from one address (from) to another (to) */
typedef struct r_anal_refline_t {
	ut64 from;
	ut64 to;
	int index;
	int level;
	int type;
	int direction;
} RAnalRefline;
typedef struct r_anal_plugin_t {
	RPluginMeta meta;

	const char *depends; // comma separated list of dependencies

	bool (*init)(RAnal *a);
	bool (*fini)(RAnal *a);
	RAnalPluginEligible eligible;

	// legacy r_anal_functions
	RAnalOpCallback op;
	RAnalCmdCallback cmd;
	RAnalOpFlowCallback opflow;

	// implement custom types parser and dumper
	RAnalTypesParserText tparse_text;
	RAnalTypesParserFile tparse_file;
	RAnalTypesParser tdump;
#if 1
	/// XXX unused but referenced, maybe worth checking in case we want them for anal
	RAnalFPBBCallback fingerprint_bb;
	RAnalFPFcnCallback fingerprint_fcn;
	RAnalDiffBBCallback diff_bb;
	RAnalDiffFcnCallback diff_fcn;
	RAnalDiffEvalCallback diff_eval;
#endif

	// Per-function analysis hooks
	RAnalFcnAnalyzeCallback analyze_fcn;      // Called after af completes
	RAnalRecoverVarsCallback recover_vars;    // Called during afva, returns vars

	// Pre-analysis hook (called early in aaa, filtered by eligible)
	RAnalPreAnalysisCallback pre_analysis;
	// Post-analysis hook (for aaaa)
	RAnalPostAnalysisCallback post_analysis;
} RAnalPlugin;
R_API void r_anal_free(RAnal *r);